--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -27,6 +27,214 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="45" data-price="18.14">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XH40LJ"><img src="https://m.media-amazon.com/images/I/6119OWqFoyL._SR400,400_.jpg" alt="BassPal Portable Bluetooth Speakers" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>136 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XH40LJ">BassPal Portable Bluetooth Speakers, Small True Wireless Stereo (TWS) Speaker with Radio, IPX5 Waterproof, HD Sound & Enhanced Bass, Mini Pocket Size...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$18.14</span><span class="ori_price">$32.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>45% off at $32.99</strong> with promo code: <strong>456PA3JM</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 01, 2019 at 10:00 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XH40LJ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="12.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2RKPrRK"><img src="https://m.media-amazon.com/images/I/61KU-rMV4IL._SR400,400_.jpg" alt="Wireless Charger Wireless Charging Pad" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>48 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2RKPrRK">Wireless Charger Wireless Charging Pad - 10W Fast Charge for Samsung Galaxy S9/S9+/S8/S8+/S7/S7 Edge/S6 Edge+/Note5/Note8, Standard Charge for iPhone...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$12.00</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>60% off at $29.99</strong> with promo code: <strong>601TLQTB</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2RKPrRK">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="5.70">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Jeliqd"><img src="https://m.media-amazon.com/images/I/71BiR0xcE3L._SR400,400_.jpg" alt="Phone Ring Holder" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>358 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Jeliqd">Phone Ring Holder & Stand/Finger Grip Stand Holder Ring 360 Rotate and 180 Flip,Car Mount Phone Ring Grip for Smartphone Tablet PC case Phone Ring (1 pcs)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.70</span><span class="ori_price">$18.99</span></address>
+      <p><span>Take <strong>70% off at $18.99</strong> with promo code: <strong>70UDUPKR</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 29, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Jeliqd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="16.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JcMy8F"><img src="https://m.media-amazon.com/images/I/51tpf2kKMkL._SR400,400_.jpg" alt="Portable Charger 10000mAh" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>279 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JcMy8F">Portable Charger 10000mAh, Yoobao Ultra Slim Power Bank High-Speed 2 USB Ports with Flashlight External Battery Backup Powerbank Compatible with...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.79</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>30% off at $23.99</strong> with promo code: <strong>30OKUL5U</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 02, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JcMy8F">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="29.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IZaays"><img src="https://m.media-amazon.com/images/I/51uRo9VifBL._SR400,400_.jpg" alt="Single Handle Bathroom" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>1 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IZaays">Keewi Single Handle Bathroom Faucet Oil Rubbed Bronze Modern Bathroom Faucet Bronze Bathroom Sink Faucet Single Lever Lavatory Faucet Solid Lead...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.80</span><span class="ori_price">$149.00</span></address>
+      <p><span>Take <strong>80% off at $149.00</strong> with promo code: <strong>80WWJPHN</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IZaays">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="21.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XidihY"><img src="https://m.media-amazon.com/images/I/812QKP4LHkL._SR400,400_.jpg" alt="StorageWorks Storage Bins" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>156 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XidihY">StorageWorks Storage Bins, Fabric Storage Baskets, Foldable Closet Organizer Trapezoid Storage Box, Polyester Canvas, Beige, EX-Jumbo, 3-Pack</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$21.59</span><span class="ori_price">$35.99</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>40% off at $35.99</strong> with promo code: <strong>4048XSRR</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XidihY">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="8.05">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XExUAa"><img src="https://m.media-amazon.com/images/I/71r7FDENvRL._SR400,400_.jpg" alt="Mini Oscillating Table Fan" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>87 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XExUAa">SkyGenius Battery Operated Mini Oscillating Table Fan, Portable Small Desk Swiveling Fan Rechargeable W/USB & 2PCS 18650 Batteries</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.05</span><span class="ori_price">$22.99</span></address>
+      <p><span>Take <strong>65% off at $22.99</strong> with promo code: <strong>65M4VH4Z</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 01, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XExUAa">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="53.58">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XEy5LQ"><img src="https://m.media-amazon.com/images/I/71GYAjOBumL._SR400,400_.jpg" alt="iTvanila Air Purifier" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>70 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XEy5LQ">iTvanila Air Purifier, Home Air Purifiers for Smokers Odor Pets, 3 in 1 True HEPA Filter, Quiet in Bedroom, Filtration System Cleaner,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$53.58</span><span class="ori_price">$66.98</span>
+        <div class="tooltip_green"><span>Double Discount</span><div class="tooltip-content"><p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p></div></div>
+      </address>
+      <p><span>Take <strong>20% off at $66.98</strong> with promo code: <strong>20EVHTD6</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XEy5LQ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="38.24">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J12kVo"><img src="https://m.media-amazon.com/images/I/511RvmSnLML._SR400,400_.jpg" alt="SINGAYE Ladder Shelf 4-Tier Bookshelf" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>83 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J12kVo">SINGAYE Ladder Shelf 4-Tier Bookshelf, Ladder Plant Stand Shelf, Storage Rack Shelves for Office, Bathroom, Living Room Brown</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$38.24</span><span class="ori_price">$44.99</span></address>
+      <p><span>Take <strong>15% off at $44.99</strong> with promo code: <strong>15TJMZJM</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J12kVo">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="7.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JfFLes"><img src="https://m.media-amazon.com/images/I/51QjV9wi2yL._SR400,400_.jpg" alt="Night Lights for Kids" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>9 Amazon Reviews</p></div>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JfFLes">Night Lights for Kids, Conor Baby Night Light, Bedside Lamp, Portable Tent Lights with 7 Colors Light Mode, Tap Mode</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.49</span><span class="ori_price">$14.98</span></address>
+      <p><span>Take <strong>50% off at $14.98</strong> with promo code: <strong>505TJCAW</strong></span></p>
+      <span class="ex_date">Expiration Date : Jul 06, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <em>*Average rating and Reviews may change after promo codes updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2JfFLes">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="32.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2LxItih"><img src="https://m.media-amazon.com/images/I/61ABEpY2FCL._SR400,400_.jpg" alt="CHISANA Wireless Earbuds" /></a>
