--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -48,6 +48,204 @@
 <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="51" data-price="632.67">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Nll5a9"><img src="https://images-na.ssl-images-amazon.com/images/I/91udcEprl8L._SX679_.jpg" alt="TCL 65R617 65-Inch 4K Ultra HD Roku Smart LED TV" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>926 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>51% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Nll5a9">TCL 65R617 65-Inch 4K Ultra HD Roku Smart LED TV (2018 Model)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$632.67</span><span class="ori_price">$1,299.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Nll5a9">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="1,016.98">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XiDglv"><img src="https://images-na.ssl-images-amazon.com/images/I/61wsBhUZqyL._SX522_.jpg" alt="Microsoft Surface Laptop" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>337 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XiDglv">Microsoft Surface Laptop (1st Gen) (Intel Core i7, 16GB RAM, 512GB) - Burgundy</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$1,016.98</span><span class="ori_price">$2,199.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XiDglv">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="19.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NmgPar"><img src="https://images-na.ssl-images-amazon.com/images/I/916QCyQ%2BV5L._SX679_.jpg" alt="Waffle Bowl Maker" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>624 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NmgPar">Presto 03500 Belgian Waffle Bowl Maker</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$19.99</span><span class="ori_price">$45.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2NmgPar">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="64" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2IYAd92"><img src="https://images-na.ssl-images-amazon.com/images/I/714nqWcJsFL._SX522_.jpg" alt="Monkey Swimming Pool" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>32 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>64% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2IYAd92">Poolmaster 81610 Learn-to-Swim Go Bananas Monkey Swimming Pool with Sun Protection, Monkey</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.99</span><span class="ori_price">$27.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2IYAd92">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="55" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XfSbwM"><img src="https://images-na.ssl-images-amazon.com/images/I/51iC0wj8aAL.jpg" alt="Home- It Mop and Broom Holder," /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>5,771 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>55% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XfSbwM">Home- It Mop and Broom Holder, 5 Position with 6 Hooks Garage Storage Holds up to 11 Tools, Storage Solutions for Broom Holders, Garage Storage...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$9.00</span><span class="ori_price">$20.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XfSbwM">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="61" data-price="91.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J051qc"><img src="https://images-na.ssl-images-amazon.com/images/I/91EoBYNPe-L._SX522_.jpg" alt="Armen Living LCSUCHWACH Summer Chair" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>143 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>61% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J051qc">Armen Living LCSUCHWACH Summer Chair in Charcoal Fabric and Walnut Wood Finish</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$91.99</span><span class="ori_price">$237.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J051qc">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="279.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Xean9U"><img src="https://images-na.ssl-images-amazon.com/images/I/41TRoGy5I7L.jpg" alt="iRobot Roomba 690 Robot Vacuum-Wi-Fi Connectivity" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>3,670 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Xean9U">iRobot Roomba 690 Robot Vacuum-Wi-Fi Connectivity, Works with Alexa, Good for Pet Hair, Carpets, Hard Floors, Self-Charging</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$279.99</span><span class="ori_price">$374.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2Xean9U">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="13" data-price="199.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XCZUEy"><img src="https://images-na.ssl-images-amazon.com/images/I/81Si0j-N4HL._SX679_.jpg" alt="ECOVACS DEEBOT N79S Robotic Vacuum Cleaner" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>4,032 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>13% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XCZUEy">ECOVACS DEEBOT N79S Robotic Vacuum Cleaner with Max Power Suction, Up to 110 min Runtime, Hard Floors and Carpets, Works with Alexa, App Controls,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$199.99</span><span class="ori_price">$229.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XCZUEy">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="41" data-price="222.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J0BNaH"><img src="https://images-na.ssl-images-amazon.com/images/I/81fzoA7KJsL._SX679_.jpg" alt="SHARK ION Robot Vacuum R75 WiFi-Connected" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,533 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>41% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J0BNaH">SHARK ION Robot Vacuum R75 WiFi-Connected, Voice Control Dual-Action Robotic Vacuum Carpet and Hard Floor Cleaner, Works with Alexa (RV750)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$222.99</span><span class="ori_price">$379.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J0BNaH">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="489.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2XIiqLz"><img src="https://images-na.ssl-images-amazon.com/images/I/61Q3R27o8TL._SX679_.jpg" alt="Dyson" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4_5.jpg' %>"><p>1,429 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2XIiqLz">Dyson Cyclone V10 Absolute Lightweight Cordless Stick Vacuum Cleaner</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$489.99</span><span class="ori_price">$699.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2XIiqLz">Shop Now at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="21" data-price="314.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2J0ALLW"><img src="https://images-na.ssl-images-amazon.com/images/I/71edWYk8N6L._SX679_.jpg" alt="Dyson V7" /></a>
+    <div class="rating"><img src="<%= asset_path 'star-4.jpg' %>"><p>1,891 Amazon Reviews</p></div>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>21% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2J0ALLW">Dyson V7 Animal Cordless Stick Vacuum Cleaner, Iron</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$314.00</span><span class="ori_price">$399.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+      <em>*Average rating and Reviews may change after the best deals updated date.</em>
+    </div>
+  </div> 
+  <div class="deal_btn"><a target="_blank" href="https://amzn.to/2J0ALLW">Shop Now at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="28" data-price="23.79">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2XhnreS"><img src="https://images-na.ssl-images-amazon.com/images/I/71rt%2BiBqIJL._SX522_.jpg" alt="HIEIE Sonic Electric Toothbrush" /></a>
