--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -195,6 +195,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 .sub_nav .sub_nav_pc{}
 .sub_nav .sub_nav_pc>ul{}
 .sub_nav .sub_nav_pc>ul>li{float:left;width:150px;text-align:center;}
+.sub_nav .sub_nav_pc>ul>li.coumos{width:260px;}
 .sub_nav .shoes_nav_pc{margin:0;}
 .sub_nav .shoes_nav_pc>ul{background:#000;padding:5px 0;}
 .sub_nav .shoes_nav_pc>ul>li{width:auto;margin:0 2%;}
