--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -15,7 +15,7 @@
           <!-- <li><a href="/deals/coupons">Sales & Coupons</a></li> -->
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
           <li><a href="/deals/quick_search">Quick Search</a></li>
-          <!-- <li><a href="/deals/promotions">Promotions</a></li> -->
+          <!-- <li class="coumos" ><a href="/deals/promotions">Coupon Codes & Promotions</a></li> -->
       </ul>
     </div>
     
@@ -26,7 +26,7 @@
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/quick_search">QUICK SEARCH,</a></li>
-        <!-- <li><a href="/deals/promotions">PROMOTIONS</a></li> -->
+        <!-- <li><a href="/deals/promotions">Coupon Codes & Promotions</a></li> -->
       </ul>
       <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="close menu" /></button>
     </div>
